--- a/index_style.css
+++ b/index_style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(images/bg.jpg);
+    background-image: url(images/bg.png);
     background-size: cover;
     margin: 0px;
     display: table;
